--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "react-stl-viewer": "^2.5.0"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
